--- a/portfolio.html
+++ b/portfolio.html
@@ -333,7 +333,7 @@
                 </div>
                 <div>
                   <h3 class="font-semibold">Email</h3>
-                  <p class="text-muted-foreground">hello@example.com</p>
+                  <p class="text-muted-foreground">424akhil@gmail.com</p>
                 </div>
               </div>
               
@@ -343,7 +343,7 @@
                 </div>
                 <div>
                   <h3 class="font-semibold">Phone</h3>
-                  <p class="text-muted-foreground">+1 (555) 123-4567</p>
+                  <p class="text-muted-foreground">+91 6282161640</p>
                 </div>
               </div>
 
@@ -353,7 +353,7 @@
                 </div>
                 <div>
                   <h3 class="font-semibold">Location</h3>
-                  <p class="text-muted-foreground">San Francisco, CA (Remote Available)</p>
+                  <p class="text-muted-foreground">Kerala, India (Remote Available)</p>
                 </div>
               </div>
             </div>
@@ -392,4 +392,5 @@
     <!-- Main Logic -->
     <script src="script.js"></script>
   </body>
+
 </html>
